<resources>
    <string name="app_name">Loop</string>
    <string name="google_sdk_id" translatable="false">775100543200-k9pr4r5j2n7tm1jd46tsoenqipg831cq.apps.googleusercontent.com</string>
    <string name="underlined_start_guest"><u>게스트로 시작하기</u></string>
    <string name="comment_hint">댓글을 입력하세요</string>
    <string name="loop_subtitle">우리들의 연결고리, 루프</string>
    <string name="save">저장</string>
    <string name="all_writing">전체 보기</string>
    <string name="location_loading">"위치를 가져오는 중입니다."</string>
    <string name="time_loading">시간을 가져오는 중입니다.</string>
    <string name="article_list">게시물 목록</string>
    <string name="like_list">좋아요 목록</string>
    <string name="activity_edit_profile">프로필 수정</string>
    <string name="activity_edit_profile_name">이름</string>
    <string name="activity_edit_profile_email">이메일</string>
    <string name="notifications_text">알림</string>
    <string name="search_text">원하는 조건으로 검색해보세요.</string>
    <string name="settings_dark_mode">다크 모드</string>
    <string name="settings_text">설정</string>
    <string name="settings_language">언어 설정</string>
    <string name="settings_edit_profile">개인정보 수정</string>
    <string name="settings_terms_of_use">이용 약관</string>
    <string name="settings_privacy_policy">개인 정보 처리 방침</string>
    <string name="settings_faq">문의 사항</string>
    <string name="settings_notifications">알림 설정</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_unregister">계정 삭제</string>
    <string name="nearby">" 인근 "</string>
    <string name="posts_came_up">개의 게시물이 올라왔어요.</string>
    <string name="based_front">""</string>
    <string name="based_end">" 기준"</string>
    <string name="settings_system_default">시스템 기본값</string>
    <string name="settings_on">켜짐</string>
    <string name="settings_off">꺼짐</string>
    <string name="settings_ask_app_restart_body">이 설정을 변경하면 시스템 안정성을 위해 앱이 재시작됩니다. 계속하시겠습니까?</string>
    <string name="settings_ask_app_restart_head">재시작 필요</string>
    <string name="settings_ask_app_restart_yes">예</string>
    <string name="settings_ask_app_restart_no">아니오</string>
    <string name="notifications_new_comment">새로운 댓글</string>
    <string name="article_detail">게시물 상세보기</string>
    <string name="bottom_sheet_option_delete">게시물 삭제하기</string>
    <string name="bottom_sheet_option_share">공유</string>
    <string name="bottom_sheet_option_report">신고</string>
    <string name="comment_highlight_fixed_reason">댓글 알림에 의해 상단 표시된 댓글입니다.</string>
    <string name="comment_writer_deleted">(삭제)</string>
    <string name="comment_contents_deleted">삭제된 댓글입니다.</string>
    <string name="article_detail_comment_count_start">"댓글 "</string>
    <string name="article_detail_comment_count_end">""</string>
    <string name="article_detail_sub_comment_count_start">"답글 "</string>
    <string name="article_detail_sub_comment_count_end">""</string>
    <string name="settings_category_personal_info">개인정보 설정</string>
    <string name="settings_customer_service">고객 지원</string>
    <string name="settings_account_manage">계정 관리</string>
    <string name="article_create_rules"><![CDATA[게시물 작성 시 규칙 준수\n \n 1. 모든 게시물은 커뮤니티 규칙 및 현행 법률을 준수해야 합니다.\n 2. 불법 행위, 차별, 혐오, 명예훼손, 사생활 침해 등의 포함하는 내용은 금지됩니다.\n \n <금지 행위>\n 1. 폭력성, 음란성, 혐오감을 주는 게시물 금지\n 2. 타인의 개인정보를 동의없이 공유하거나 침해하는 행위 금지\n 3. 타인의 명의를 도용한 게시물 및 댓글 금지\n 4. 의도적 도배 게시물 및 댓글 금지\n \n 게시물 작성 Tip!\n 1. 이웃들에게 도움이 되는 유익하고 신뢰할 수 있는 정보를 공유하세요!\n 2. 사실에 근거한 내용을 작성하고, 허위사실 유포를 피하세요!\n 3. 적절한 언어를 사용하여 이웃들에게 불쾌감을 주지 않도록 주의하세요!\n \n <신고 및 제재>\n 1. 규칙 위반 게시물은 신고 버튼을 통해 신고할 수 있습니다\n 2. 반복적인 규칙 위반 시 서비스 이용이 제한될 수 있습니다.\n -> 1차 경고: 경미한 규칙 위반 시 경고 메시지를 받게 됩니다.\n -> 2차 제한: 반복적인 규칙 위반 시 일정 기간 동안 게시물 작성 및 커뮤니티 활동이 제한됩니다.\n -> 3차 영구 제한: 심각한 규칙 위반 또는 반복적인 위반 시 영구적으로 서비스 이용이 제한될 수 있습니다.\n \n 첨부한 사진은 AI에 의해 자동 모자이크 처리 될 수 있습니다.]]></string>
    <string name="location_edit_ask_warning_body"><![CDATA[위치를 바꾸는 경우 게시물의 신뢰성이 낮아질 수 있으며, 위치를 바꾼 후 정책을 위반한 것으로 판단되는 경우 운영 정책에 의해 삭제될 수 있습니다.\n계속하시겠습니까?]]></string>
    <string name="location_edit_ask_warning_head">위치 변경 경고</string>
    <string name="location_edit_ask_warning_yes">예</string>
    <string name="location_edit_ask_warning_no">아니오</string>
    <string name="location_edit_confirm_head">위치 확인</string>
    <string name="location_edit_confirm_body">아래 표시된 위치가 맞습니까?</string>
    <string name="location_edit_confirm_yes">예</string>
    <string name="location_edit_confirm_no">아니오</string>
    <string name="article_create_contents_hint">내용을 입력하세요.</string>
    <string name="article_create_edit_location">위치 수정</string>
    <string name="article_create_attach_picture">사진 첨부</string>
    <string name="toolbar_text_article_create">게시물 작성</string>
    <string name="toolbar_text_modify_location">위치 수정</string>
    <string name="settings_notification_comment_setting">댓글 알림 수신</string>
    <string name="settings_notification_head">알림 설정</string>
    <string name="settings_notification_favorite_setting">게시물 공감 알림 수신</string>
    <string name="settings_unregister_head">계정 삭제</string>
    <string name="settings_unregister_body"><![CDATA[계정을 정말로 삭제하시겠습니까?\n계속 하시려면 삭제를 입력해주세요.]]></string>
    <string name="settings_unregister_warning">되돌릴 수 없는 민감한 작업입니다.</string>
    <string name="settings_unregister_repeat_word">삭제</string>
    <string name="settings_unregister_yes">삭제</string>
    <string name="settings_unregister_no">취소</string>
    <string name="profile_edit_save">저장</string>
    <string name="profile_edit_cancel">취소</string>
    <string name="settings_logout_head">로그아웃</string>
    <string name="settings_logout_body">정말 로그아웃하시겠습니까?</string>
    <string name="settings_logout_yes">예</string>
    <string name="settings_logout_no">아니오</string>
    <string name="no_articles">게시물이 없습니다.</string>
    <string name="please_type_keywords">검색어를 입력해주세요.</string>
    <string name="cant_get_current_location">현재 위치를 받아올 수 없습니다.</string>
    <string name="terms_of_use">이용 약관</string>
    <string name="terms_of_information">개인 정보 처리 방침</string>
    <string name="terms_of_faq">FAQ</string>
    <string name="notifications_new_favorite">새로운 공감</string>
    <string name="article_delete_head">게시물 삭제</string>
    <string name="article_delete_body">게시물을 정말로 삭제하시겠습니까?</string>
    <string name="article_delete_yes">예</string>
    <string name="article_delete_no">아니오</string>
    <string name="comment_delete_head">댓글 삭제</string>
    <string name="comment_delete_body">댓글을 정말로 삭제하시겠습니까?</string>
    <string name="comment_delete_yes">예</string>
    <string name="comment_delete_no">아니오</string>
    <string name="article_report_head">게시물 신고</string>
    <string name="article_report_body">게시물을 정말로 신고하시겠습니까?</string>
    <string name="article_report_yes">예</string>
    <string name="article_report_no">아니오</string>
    <string name="comment_report_head">댓글 신고</string>
    <string name="comment_report_body">댓글을 정말로 신고하시겠습니까?</string>
    <string name="comment_report_yes">예</string>
    <string name="comment_report_no">아니오</string>
    <string name="comment_delete_option">댓글 삭제하기</string>
    <string name="keyword_cannot_be_empty">키워드는 비워둘 수 없습니다.</string>
    <string name="maximum_length_keyword_20">키워드의 최대 길이는 20글자 입니다.</string>
    <string name="error_bring_comments">댓글을 불러오는 중 오류가 발생했습니다.</string>
    <string name="error_comment_information_response">댓글 정보 응답이 성공적이지 않습니다.</string>
    <string name="comment_make_success">댓글이 작성되었습니다.</string>
    <string name="fail_get_list">게시물 목록을 받아올 수 없습니다.</string>
    <string name="no_location_permission">위치 권한이 없어 사용할 수 없습니다.</string>
    <string name="unable_get_current_location">현재 위치를 받아올 수 없습니다.</string>
    <string name="fail_marker_request">마커 요청에 실패했습니다.</string>
    <string name="fail_timeline_request">타임라인 요청에 실패했습니다.</string>
    <string name="fail_create_post_error_code">"게시물 작성에 실패했습니다. 오류 코드 "</string>
    <string name="error_post_creation_request">게시물 작성 요청 중 오류가 발생했습니다.</string>
    <string name="problem_image_compression_engine_no_file">이미지 압축 엔진에 이상이 있습니다. 파일이 없습니다.</string>
    <string name="problem_image_compression_engine">이미지 압축 엔진에 이상이 있습니다.</string>
    <string name="unknown_user_name">알 수 없는 사용자</string>
    <string name="no_more_than_one_photo">사진은 한 장을 넘길 수 없습니다.</string>
    <string name="not_enough_content">내용이 충분하지 않습니다.</string>
    <string name="no_inappropriate_content">부적절한 내용은 들어갈 수 없습니다.</string>
    <string name="server_error_category_analysis_not_possible">서버 내부 오류로 의도 및 주제 분석이 불가능합니다.</string>
    <string name="post_information_invalid">게시물 정보가 유효하지 않습니다.</string>
    <string name="deleted_post">삭제된 게시물입니다.</string>
    <string name="post_information_response_not_successful">게시물 정보 응답이 성공적이지 않습니다.</string>
    <string name="fail_request_post_information">게시물 정보 요청에 실패했습니다.</string>
    <string name="searche_at_least_two_letters">검색은 최소 두글자입니다.</string>
    <string name="fail_get_token">토큰을 가져오는데 실패했습니다.</string>
    <string name="fail_change_profile_picture">프로필 사진 변경에 실패했습니다.</string>
    <string name="unable_save">저장할 수 없습니다.</string>
    <string name="fail_login">로그인에 실패하였습니다.</string>
    <string name="cancel_login">로그인을 취소하였습니다.</string>
    <string name="authentication_fail">Authentication Failed.</string>
    <string name="authentication_network_fail">Authentication Network Failed.</string>
    <string name="fail_create_membership_information">회원 정보 생성에 실패하였습니다.</string>
    <string name="token_value_invalid">Token 값이 유효하지 않습니다.</string>
    <string name="authentication_process_fail">인증 절차에 실패했습니다.</string>
    <string name="opting_out_of_alarm">알림 수신을 거부하셨습니다.</string>
    <string name="deny_alarm_permission">알림 권한이 거부되었습니다.</string>
    <string name="less_accurate_no_precise_location_information">정확한 위치 정보를 받아올 수 없어 정확성이 떨어집니다.</string>
    <string name="deny_permission_not_available">권한이 거부되어 정상적인 이용이 불가능합니다.</string>
    <string name="fail_account_deletion">계정 삭제에 실패했습니다.</string>
    <string name="account_delete">계정이 삭제되었습니다.</string>
    <string name="invalid_request">유효하지 않은 요청입니다.</string>
    <string name="error_getting_terms">약관을 받아오는 중 오류가 발생했습니다.</string>
    <string name="reported_successful">신고가 완료되었습니다.</string>
    <string name="share_via_text">"우리들의 연결고리, 루프에서 확인하세요. "</string>
    <string name="share_select_text">공유 수단</string>
    <string name="permission_request_notification_head">권한 요청</string>
    <string name="permission_request_notification_body">댓글 알림, 좋아요 알림 등의 작업을 위해서 알림 승인이 필요합니다.</string>
    <string name="permission_request_notification_yes">허가</string>
    <string name="permission_request_notification_no">거부</string>
    <string name="permission_request_gps_head">권한 요청</string>
    <string name="permission_request_gps_body">댓글 알림, 좋아요 알림 등의 작업을 위해서 알림 승인이 필요합니다.</string>
    <string name="permission_request_gps_yes">허가</string>
    <string name="permission_request_gps_no">거부</string>
    <string name="notification_comment_prefix">"게시물에 "</string>
    <string name="notification_comment_suffix">"개의 좋아요가 달렸습니다."</string>
    <string name="double_back_to_exit">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="purpose_and_keyword_header">의도, 주제 및 키워드</string>
    <string name="purpose_and_keyword_body">의도 및 주제는 수정할 수 없으나, 키워드는 수정하실 수 있습니다.</string>
    <string name="purpose_and_keyword_cancel">취소</string>
    <string name="purpose_and_keyword_submit">작성</string>
    <string name="purpose_and_keyword_keyword_hint">#키워드</string>
    <string name="search_option_category1_default">전체 의도</string>
    <string name="search_option_category2_default">전체 주제</string>
    <string name="search_option_search_by_contents">" 내용 "</string>
    <string name="search_option_search_by_keywords">키워드</string>
    <string name="search_option_search_by_writer">작성자</string>
    <string name="settings_license_register">관리자 라이센스 등록</string>
    <string name="settings_license_remove">관리자 라이센스 제거</string>
</resources>