<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/filter"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/filter_button_bg"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center_vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:singleLine="true"
            android:text="@string/search_text"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:translationZ="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/filter"
            app:layout_constraintStart_toStartOf="@+id/filter"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search_48px" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/googleMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/overview_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_layout" />

    <TextView
        android:id="@+id/overview_text"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:bufferType="spannable"
        android:fontFamily="@font/pretendard_extra_bold"
        android:gravity="bottom"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:text="@string/location_loading"
        android:textColor="@color/main_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/overview_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/overview_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/time_loading"
        android:textColor="@color/sub_text_2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/summarize_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="135dp"
        android:background="@drawable/map_overview_behave_btn_bg"
        app:layout_constraintBottom_toBottomOf="@+id/googleMap"
        app:layout_constraintEnd_toEndOf="@+id/googleMap"
        app:srcCompat="@drawable/summarize_24px" />

    <ImageButton
        android:id="@+id/article_write_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/map_overview_behave_btn_bg"
        app:layout_constraintBottom_toBottomOf="@+id/googleMap"
        app:layout_constraintEnd_toEndOf="@+id/googleMap"
        app:srcCompat="@drawable/edit_square_24px" />

    <ImageButton
        android:id="@+id/gps_move_to_current_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/map_overview_behave_btn_bg"
        app:layout_constraintBottom_toBottomOf="@+id/googleMap"
        app:layout_constraintEnd_toEndOf="@+id/googleMap"
        app:srcCompat="@drawable/mark" />

</androidx.constraintlayout.widget.ConstraintLayout>